--- a/source/pom.xml
+++ b/source/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.xobotun</groupId>
     <artifactId>duration-pretty-printer</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <name>Duration Pretty Printer</name>
     <description>A small library intended to substitute java.time.Duration ISO8601-compliant toString() to a more human-readable string.</description>
     <url>https://github.com/xobotun/duration-pretty-printer</url>
@@ -24,7 +24,7 @@
         <connection>scm:git:git://github.com/xobotun/duration-pretty-printer.git</connection>
         <developerConnection>scm:git:ssh://git@github.com:xobotun/duration-pretty-printer.git</developerConnection>
         <url>http://github.com/xobotun/duration-pretty-printer/tree/master</url>
-      <tag>duration-pretty-printer-1.0.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
